#39 : created new role to init database before synapse chart installation

--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -10,6 +10,7 @@
     - external-dns
     - keycloak-operator
     - keycloak
+    - postgresql-init
     - synapse
     - first-admin
     - psc-button
