--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -178,7 +178,7 @@ jobs:
         run: terraform apply -auto-approve -input=false
 
   configuration:
-    name: "Configuration of Kubernetes cluster"
+    name: "Configuration with Ansible"
     runs-on: ubuntu-latest
     needs: [provisioning, set_environment]
     environment:
