--- a/ansible/roles/postgresql-init/templates/psql-initdb-job.yml
+++ b/ansible/roles/postgresql-init/templates/psql-initdb-job.yml
@@ -8,7 +8,7 @@ spec:
     spec:
       containers:
         - name: psql
-          image: governmentpaas/psql
+          image: governmentpaas/psql:pr-287
           command: ["sh", "-c"]
           args:
             - "sh /scripts/initdb.sh"
