Feat/39 ensure persistence of data matabiau deployed (#133)
* #39 : better persistence of data  - postgresql installation

* #39 : better persistence of data  - postgresql installation + VPC creation

* #39 : suppression of cluster_name and nodepool_name variables

* #39 : cidr for vlan

* #39 : only database. Vlan commented

* #39 : better persistence of data - GHA workflow

* terraform fmt

* #39 : better persistence of data  - var for GHA Wrokflow

* #39 : correction to pass GHA

* #39 : correction to pass GHA

* #39 : correction to pass GHA

* #39 : postgresql installation - number of nodes depends directly from the plan

* #39 : better persistence of data - vpc and subnet creation ok (database not located on the subnet)

* #39 : better persistence of data  - postgresql installed on the private network

* #39 : terraform fmt

* #39 : correction on destroy GHA workflow and on script used to retrieve kaycloak passwords

* #39 : synapse plugged to external postgresql database

* #39 : created new role to init database before synapse chart installation

* #39 : unused variables and linter correction

* #39 : ansible linter

* #39 : forgot to variabilize this value

* #39 : documentation update

* #39 : db name variabilized

* #39 : vlan_id var suppressed

* #39 : just an exemple of value for cidr

* #39 : code cleaning

* #39 : just a comment

* #39 : psql docker image arbitrarily fixed to avoid breaking change

--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -23,6 +23,15 @@
       serverName: "{{ matrix.server_name }}"
       config:
         enableRegistration: true
+      postgresql:
+        enabled: false
+      externalPostgresql:
+        host: "{{ matrix.db_host }}"
+        port: "{{ matrix.db_port }}"
+        database: "{{ matrix.db_instance_name }}"
+        username: "{{ matrix.db_user }}"
+        existingSecret: postgres-secrets
+        existingSecretPasswordKey: synapse-db-password
       ingress:
         className: nginx
         annotations:
