helm chart version for cert-manager and ingress-controller now saved in conf

--- a/ansible/roles/ingress-controller/tasks/main.yml
+++ b/ansible/roles/ingress-controller/tasks/main.yml
@@ -8,6 +8,7 @@
   kubernetes.core.helm:
     name: ingress-nginx
     chart_ref: ingress-nginx/ingress-nginx
+    chart_version: "{{ ingress_controller.version }}"
     release_namespace: ingress-nginx
     create_namespace: true
     update_repo_cache: yes
