--- a/ansible/roles/cert-manager/tasks/main.yml
+++ b/ansible/roles/cert-manager/tasks/main.yml
@@ -8,7 +8,7 @@
   kubernetes.core.helm:
     name: my-cert-manager
     chart_ref: jetstack/cert-manager
-    chart_version: 1.11.0
+    chart_version: "{{ cert_manager.version }}"
     release_namespace: cert-manager
     create_namespace: true
     release_values:
