--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -22,7 +22,7 @@
           - "cp /etc/matrix-synapse/conf.d/* /synapse/config/conf.d/"
       serverName: "{{ matrix.server_name }}"
       config:
-        enableRegistration: true
+        enableRegistration: "{{ matrix.auto_registration }}"
       postgresql:
         enabled: false
       externalPostgresql:
