--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -58,6 +58,7 @@ env:
   SMTP_HOST: ${{ vars.SMTP_HOST }}
   SMTP_USER: ${{ vars.SMTP_USER }}
   SMTP_PASS: ${{ secrets.SMTP_PASS }}
+  SMTP_NOTIFY_FROM: ${{ vars.SMTP_NOTIFY_FROM }}
   FIRST_EIMIS_USERNAME: ${{ secrets.FIRST_EIMIS_USERNAME }}
   FIRST_EIMIS_PASSWORD: ${{ secrets.FIRST_EIMIS_PASSWORD }}
   DUMMY_USERNAME: ${{ secrets.DUMMY_USERNAME }}
