don't apply msteams registration configmap if not enabled

--- a/ansible/roles/synapse-extra-config/tasks/main.yml
+++ b/ansible/roles/synapse-extra-config/tasks/main.yml
@@ -13,6 +13,10 @@
 - name: mount extraconfig configmap on matrix-synapse pod
   shell: "kubectl patch deployment matrix-synapse -p '{{ lookup('template', 'deployment-patch.yml') }}' "
 
+- name: mount msteams extraconfig configmap on matrix-synapse pod
+  shell: "kubectl patch deployment matrix-synapse -p '{{ lookup('template', 'deployment-msteams-patch.yml') }}' "
+  when: msteams.enabled
+
 - name: Scale down matrix-synapse deployment
   kubernetes.core.k8s_scale:
     api_version: v1
