setup prometheus instance and service monitor

--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -14,3 +14,13 @@
   kubernetes.core.k8s:
     state: present
     template: "prometheus-rbac.yml"
+
+- name: Prometheus instance
+  kubernetes.core.k8s:
+    state: present
+    template: "prometheus-instance.yml"
+
+- name: Service monitor
+  kubernetes.core.k8s:
+    state: present
+    template: "self-service-monitor.yml"
