#146 correction of a confusion between absent_or_present global var and msteams_absent_or_present specific var

--- a/ansible/roles/teams-bridge/tasks/main.yml
+++ b/ansible/roles/teams-bridge/tasks/main.yml
@@ -1,38 +1,38 @@
 ---
 - name: should the bridge be present or not?
   set_fact:
-    absent_or_present: "{{ 'absent' if absent_or_present == 'absent' or not msteams.enabled else 'present' }}"
+    msteams_absent_or_present: "{{ 'absent' if absent_or_present == 'absent' or not msteams.enabled else 'present' }}"
 
 - name: Create or delete namespace dedicated to msteams bridge
   kubernetes.core.k8s:
     name: msteams
     api_version: v1
     kind: Namespace
-    state: "{{ absent_or_present }}"
+    state: "{{ msteams_absent_or_present }}"
 
 - name: Bridge configmap
   kubernetes.core.k8s:
-    state: "{{ absent_or_present }}"
+    state: "{{ msteams_absent_or_present }}"
     template: "msteams-configmap.yml"
 
 - name: Bridge persistent volume
   kubernetes.core.k8s:
-    state: "{{ absent_or_present }}"
+    state: "{{ msteams_absent_or_present }}"
     template: "msteams-pvc.yml"
 
 - name: Bridge app deployment
   kubernetes.core.k8s:
-    state: "{{ absent_or_present }}"
+    state: "{{ msteams_absent_or_present }}"
     template: "msteams-deployment.yml"
 
 - name: Bridge service
   kubernetes.core.k8s:
-    state: "{{ absent_or_present }}"
+    state: "{{ msteams_absent_or_present }}"
     template: "msteams-service.yml"
 
 - name: Bridge ingress
   kubernetes.core.k8s:
-    state: "{{ absent_or_present }}"
+    state: "{{ msteams_absent_or_present }}"
     template: "msteams-ingress.yml"
 
 - name: wait for the msteams replicaset to be ready
@@ -41,12 +41,12 @@
   until: rs_message.stdout.find("successfully") != -1
   retries: 30
   delay: 5
-  when: absent_or_present=="present"
+  when: msteams_absent_or_present=="present"
 
 - name: get name of the pod deployed for the bridge
   shell: 'kubectl get pods -n msteams -l app=msteams-bridge -o jsonpath="{.items[0].metadata.name}"'
   register: pod_name
-  when: absent_or_present=="present"
+  when: msteams_absent_or_present=="present"
 
 - name: Create temporary folder
   ansible.builtin.tempfile:
@@ -62,16 +62,16 @@
     remote_path: /data/msteams-registration.yaml
     local_path: "{{ teams_registration_tmp_folder.path }}/msteams-registration.yaml"
     state: from_pod
-  when: absent_or_present=="present"
+  when: msteams_absent_or_present=="present"
 
 - name: Copy vars of msteams-registration.yaml into the msteams_bridge_vars variable
   ansible.builtin.include_vars:
     file: "{{ teams_registration_tmp_folder.path }}/msteams-registration.yaml"
     name: msteams_bridge_vars
-  when: absent_or_present=="present"
+  when: msteams_absent_or_present=="present"
 
 - name: Create or update msteams-registration-configmap with msteams_bridge_vars values
   kubernetes.core.k8s:
-    state: "{{ absent_or_present }}"
+    state: "{{ msteams_absent_or_present }}"
     template: "msteams-registration.yml"
-  when: absent_or_present=="present"
+  when: msteams_absent_or_present=="present"
