#113 use of kube-prometheus provides for a complete cluster monitoring stack based on Prometheus and the Prometheus Operator + basic configuration of synapse monitoring service

--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -18,6 +18,10 @@
       synapse:
         strategy:
           type: Recreate
+        annotations:
+          prometheus.io/scrape: "true"
+          prometheus.io/path: "/_synapse/metrics"
+          prometheus.io/port: "9090"
         extraCommands:
           - "cp /etc/matrix-synapse/conf.d/* /synapse/config/conf.d/"
       serverName: "{{ matrix.server_name }}"
