--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -1,36 +1,61 @@
 ---
-# Based on https://grafana.com/blog/2023/01/19/how-to-monitor-kubernetes-clusters-with-the-prometheus-operator/
-- name: Create or delete monitoring namespace
+## Based on https://github.com/prometheus-operator/kube-prometheus
+- name: Install git
+  apt:
+    name: git
+    state: present
+
+- name: Create temporary folder
+  ansible.builtin.tempfile:
+    state: directory
+    suffix: temp
+  register: git_tmp_folder
+  changed_when: False
+
+- name: Git clone kube-prometheus project
+  ansible.builtin.git:
+    repo: "{{ monitoring.kube_prometheus_git_url }}"
+    dest: "{{ git_tmp_folder.path }}"
+    version: "{{ monitoring.kube_prometheus_version }}"
+
+- name: debug absent_or_present
+  ansible.builtin.debug:
+    msg: "absent_or_present = {{ absent_or_present }}"
+
+- name: Create the monitoring stack - phase 1
+  command: kubectl apply --server-side -f manifests/setup
+  args:
+    chdir: "{{ git_tmp_folder.path }}"
+  when: absent_or_present=="present"
+
+- name: Create the monitoring stack - phase 2
+  command: kubectl wait --for condition=Established --all CustomResourceDefinition --namespace=monitoring
+  args:
+    chdir: "{{ git_tmp_folder.path }}"
+  when: absent_or_present=="present"
+
+- name: Create the monitoring stack - phase 3
+  command: kubectl apply -f manifests/
+  args:
+    chdir: "{{ git_tmp_folder.path }}"
+  when: absent_or_present=="present"
+
+- name: Delete the monitoring stack
+  command: kubectl delete --ignore-not-found=true -f manifests/ -f manifests/setup
+  args:
+    chdir: "{{ git_tmp_folder.path }}"
+  when: absent_or_present=="absent"
+
+- name: Matrix-synapse service for monitoring
   kubernetes.core.k8s:
-    name: monitoring
-    api_version: v1
-    kind: Namespace
     state: "{{ absent_or_present }}"
+    template: "matrix-monitoring-svc.yml"
 
-- name: Prometheus operator
-  shell: "kubectl apply -f https://raw.githubusercontent.com/prometheus-operator/prometheus-operator/v0.67.0/bundle.yaml --force-conflicts=true --server-side=true"
-
-- name: Install Prometheus RBAC
+# From now on this code is based on
+# - https://prometheus-operator.dev/docs/user-guides/getting-started/#using-podmonitors
+# - https://matrix-org.github.io/synapse/latest/metrics-howto.html
+# - https://github.com/matrix-org/synapse/tree/master/contrib/grafana/
+- name: Matrix-synapse service monitor
   kubernetes.core.k8s:
-    state: present
-    template: "prometheus-rbac.yml"
-
-- name: Prometheus instance
-  kubernetes.core.k8s:
-    state: present
-    template: "prometheus-instance.yml"
-
-- name: Service monitor
-  kubernetes.core.k8s:
-    state: present
-    template: "self-service-monitor.yml"
-
-- name: Grafana
-  kubernetes.core.k8s:
-    state: present
-    template: "grafana.yml"
-
-- name: Grafana ingress
-  kubernetes.core.k8s:
-    state: present
-    template: "grafana-ingress.yml"
+    state: "{{ absent_or_present }}"
+    template: "matrix-pod-ananace-monitor.yml"
