--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -76,6 +76,7 @@ env:
   PROSANTE_CONNECT_CLIENT_SECRET: ${{ secrets.PROSANTE_CONNECT_CLIENT_SECRET }}
   # variables used by monitoring
   MONITORING_SUBDOMAIN_NAME: ${{ vars.MONITORING_SUBDOMAIN_NAME }}
+  MONITORING_GRAFANA_PASSWORD: ${{ secrets.MONITORING_GRAFANA_PASSWORD }}
 
 jobs:
   set_environment:
