--- a/ansible/roles/monitoring/tasks/main.yml
+++ b/ansible/roles/monitoring/tasks/main.yml
@@ -20,6 +20,7 @@
         prometheusSpec:
           serviceMonitorSelectorNilUsesHelmValues: false
       grafana:
+        adminPassword: "{{ monitoring.grafana_password }}"
         defaultDashboardsTimezone: cest
         ingress:
           enabled: true
