--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -37,6 +37,7 @@ env:
   AWS_S3_ENDPOINT: ${{ vars.AWS_S3_ENDPOINT }}
   AWS_REGION: ${{ vars.AWS_REGION }}
   # variables used by infrastructure components
+  ENV_IN_URL: ${{vars.ENV_IN_URL}}
   CLUSTER_VERSION: ${{ vars.CLUSTER_VERSION }}
   NODEPOOL_FLAVOR: ${{ vars.NODEPOOL_FLAVOR }}
   DESIRED_NODES_NUM: ${{ vars.DESIRED_NODES_NUM }}
