fix downloading a file shared in a room

--- a/ansible/roles/element-web/tasks/main.yml
+++ b/ansible/roles/element-web/tasks/main.yml
@@ -10,6 +10,11 @@
       defaultServer:
         url: "https://{{ matrix.server_name }}"
         name: "{{ matrix.server_name }}"
+      nginxConfig: |-
+        add_header X-Frame-Options SAMEORIGIN;
+        add_header X-Content-Type-Options nosniff;
+        add_header X-XSS-Protection "1; mode=block";
+        add_header Content-Security-Policy "frame-ancestors 'self'";
       ingress:
         enabled: true
         className: nginx
