--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -17,7 +17,7 @@
 
 - name: Download s3 media repo module
   ansible.builtin.get_url:
-    url: https://raw.githubusercontent.com/matrix-org/synapse-s3-storage-provider/v1.2.1/s3_storage_provider.py
+    url: https://raw.githubusercontent.com/matrix-org/synapse-s3-storage-provider/{{ matrix.s3_media_repo.module_version }}/s3_storage_provider.py
     dest: "{{s3_module_tmp_folder.path}}/s3_storage_provider.py"
 
 # TODO: better manage indempotence and variable for module version
