--- a/ansible/roles/synapse/tasks/main.yml
+++ b/ansible/roles/synapse/tasks/main.yml
@@ -8,25 +8,38 @@
     name: ananace-charts
     repo_url: "https://ananace.gitlab.io/charts"
 
+- name: New module version?
+  shell: |
+    current_version=$(kubectl get configmap s3-media-repo-module -o "jsonpath={.data['module_version']}")
+    if [ "$current_version" = "{{ matrix.s3_media_repo.module_version }}" ]; then
+      echo "no"
+    else
+      echo "yes"
+    fi
+  register: new_version
+  ignore_errors: True
+
 - name: Create temporary folder
   ansible.builtin.tempfile:
     state: directory
     suffix: temp
   register: s3_module_tmp_folder
-  changed_when: False
+  when: new_version.stdout == "yes"
 
 - name: Download s3 media repo module
   ansible.builtin.get_url:
     url: https://raw.githubusercontent.com/matrix-org/synapse-s3-storage-provider/{{ matrix.s3_media_repo.module_version }}/s3_storage_provider.py
     dest: "{{s3_module_tmp_folder.path}}/s3_storage_provider.py"
+  when: new_version.stdout == "yes"
 
-# TODO: better manage indempotence and variable for module version
 - name: Delete config map for s3 media repo module
   shell: "kubectl delete configmap s3-media-repo-module"
   ignore_errors: True
+  when: new_version.stdout == "yes"
 
 - name: Create config map for s3 media repo module
-  shell: "kubectl create configmap s3-media-repo-module --from-file '{{ s3_module_tmp_folder.path }}/'"
+  shell: "kubectl create configmap s3-media-repo-module --from-file '{{ s3_module_tmp_folder.path }}/' --from-literal module_version={{ matrix.s3_media_repo.module_version }}"
+  when: new_version.stdout == "yes"
 
 - name: matrix-synapse helm chart
   kubernetes.core.helm:
