--- a/.github/workflows/destroy.yml
+++ b/.github/workflows/destroy.yml
@@ -35,6 +35,7 @@ env:
   AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
   AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
   AWS_S3_ENDPOINT: ${{ vars.AWS_S3_ENDPOINT }}
+  AWS_S3_MEDIA_REPO_ENDPOINT: ${{ vars.AWS_S3_MEDIA_REPO_ENDPOINT }}
   AWS_REGION: ${{ vars.AWS_REGION }}
   # variables used by infrastructure components
   ENV_IN_URL: ${{vars.ENV_IN_URL}}
