rebasing on develop

--- a/ansible/configuration.yml
+++ b/ansible/configuration.yml
@@ -9,6 +9,7 @@
     - cert-manager
     - external-dns
     - postgresql-init
+    - double-bridge
     - teams-bridge
     - synapse
     - first-admin
