monitoring: parametrize prometheus volume size

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -89,6 +89,7 @@ env:
   # variables used by monitoring
   MONITORING_SUBDOMAIN_NAME: ${{ vars.MONITORING_SUBDOMAIN_NAME }}
   MONITORING_GRAFANA_PASSWORD: ${{ secrets.MONITORING_GRAFANA_PASSWORD }}
+  MONITORING_PROMETHEUS_VOLUME_SIZE: ${{ vars.MONITORING_PROMETHEUS_VOLUME_SIZE }}
 
 jobs:
   set_environment:
