--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -66,7 +66,7 @@ jobs:
           # queries: # optional
           # verbose scan
           # verbose: # optional
-          fail_on: high
+          ignore_on_exit: results
 
       - name: Upload SARIF file
         uses: github/codeql-action/upload-sarif@v2
