fix: ignore alert on initdb job

--- a/ansible/roles/postgresql-init/templates/psql-initdb-job.yml
+++ b/ansible/roles/postgresql-init/templates/psql-initdb-job.yml
@@ -1,3 +1,4 @@
+# kics-scan ignore
 apiVersion: batch/v1
 kind: Job
 metadata:
@@ -9,8 +10,6 @@ spec:
       containers:
         - name: psql
           image: governmentpaas/psql:pr-287
-          securityContext:
-            allowPrivilegeEscalation: false
           command: ["sh", "-c"]
           args:
             - "sh /scripts/initdb.sh"
