fix: bug linked to terraform version bump corrected (#214)
* fix: bug linked to terraform version bump corrected : the AWS_ENDPOINT_URL_S3 should now contain the http/https prefix

* fix : AWS_ENDPOINT_URL_S3 on CI

* fix: new param added to be compatible with TF1.6

* fix: TF version used in deploy, destroy and lint workflows fixed to 1.6

--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -16,7 +16,7 @@ jobs:
       - name: Setup Terraform
         uses: hashicorp/setup-terraform@v2
         with:
-          terraform_version: 1.4.7
+          terraform_version: 1.6.*
 
       - name: Terraform Init
         run: terraform init -backend=false
